Fixed zooming issue on mobile screens

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
     text-align: center;
     height: 100vh;
     color: #c59a6c;
+    touch-action: manipulation;
 }
 
 #container {
